# codex

.github/workflows/: bazel.yml  blob-size-policy.yml  ci.yml  codespell.yml  rust-ci-full.yml  rust-release-prepare.yml  rust-release.yml  sdk.yml
codex-rs/: Cargo.toml
codex-rs/chat-completions/: Cargo.toml
codex-rs/chat-completions/src/: convert.rs  lib.rs  stream.rs
codex-rs/cli/: Cargo.toml
codex-rs/codex-api/src/endpoint/: models.rs
codex-rs/core/: Cargo.toml  gpt-5.1-codex-max_prompt.md  gpt_5_1_prompt.md  gpt_5_2_prompt.md  gpt_5_codex_prompt.md  hierarchical_agents_message.md  prompt_with_apply_patch_instructions.md  review_prompt.md
codex-rs/core/src/: client.rs  client_tests.rs  realtime_prompt.rs  review_prompts.rs  thread_manager.rs
codex-rs/core/src/config/: mod.rs
codex-rs/core/src/guardian/: policy_template.md  prompt.rs
codex-rs/core/src/memories/: prompts.rs  prompts_tests.rs
codex-rs/core/templates/agents/: orchestrator.md
codex-rs/core/templates/collab/: experimental_prompt.md
codex-rs/core/templates/compact/: prompt.md  summary_prefix.md
codex-rs/core/templates/memories/: consolidation.md  read_path.md  stage_one_input.md  stage_one_system.md
codex-rs/model-provider-info/src/: lib.rs
codex-rs/models-manager/: BUILD.bazel  deepseek_prompt.md
codex-rs/models-manager/src/: manager.rs  manager_tests.rs  model_info.rs  model_info_tests.rs
codex-rs/realtime-webrtc/src/: lib.rs
codex-rs/tui/: Cargo.toml  tooltips.txt
codex-rs/tui/src/: app_event.rs  lib.rs  webrtc_stub.rs
docs/: codex-rs-codebase-overview.md
(+10 files in other folders)
