[package]
name = "codex-chat-completions"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
codex-api = { workspace = true }
codex-client = { workspace = true }
codex-protocol = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { version = "1", features = ["v4"] }
eventsource-stream = { workspace = true }
